<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:overScrollMode="never"
    android:background="@drawable/cropbackground"
    android:scrollbars="none"
    tools:context=".OTPScreen"
    tools:ignore="SpeakableTextPresentCheck">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:orientation="vertical">

        <ImageView
            android:layout_width="133dp"
            android:layout_height="133dp"
            android:layout_marginLeft="5dp"
            android:layout_marginTop="96dp"
            android:contentDescription="@string/app_name"
            android:src="@drawable/splash" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:text="@string/otp_verification"
            android:textSize="20sp"
            android:textColor="#11294B"
            android:textStyle="bold"
            android:fontFamily="@font/a"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="50dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="50dp"
            android:gravity="center"
            android:textStyle="bold"
            android:text="@string/enter_the_otp_sent_to"
            android:textSize="14sp"
            android:textColor="#000000"/>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:gravity="center"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/inputcode1"
                android:layout_width="40dp"
                android:layout_height="45dp"
                android:gravity="center"
                android:imeOptions="actionNext"
                android:importantForAutofill="no"
                android:inputType="number"
                android:maxLength="1"
                android:textColor="@color/black"
                android:textSize="24sp"
                android:textStyle="bold"
                tools:ignore="lableFor,SpeakableTextPresentCheck,TouchTargetSizeCheck" />

            <EditText
                android:id="@+id/inputcode2"
                android:layout_width="40dp"
                android:layout_height="45dp"
                android:gravity="center"
                android:imeOptions="actionNext"
                android:importantForAutofill="no"
                android:inputType="number"
                android:maxLength="1"
                android:textColor="@color/black"
                android:textSize="24sp"
                android:textStyle="bold"
                tools:ignore="lableFor,SpeakableTextPresentCheck,TouchTargetSizeCheck" />

            <EditText
                android:id="@+id/inputcode3"
                android:layout_width="40dp"
                android:layout_height="45dp"
                android:gravity="center"
                android:imeOptions="actionNext"
                android:importantForAutofill="no"
                android:inputType="number"
                android:maxLength="1"
                android:textColor="@color/black"
                android:textSize="24sp"
                android:textStyle="bold"
                tools:ignore="lableFor,SpeakableTextPresentCheck,TouchTargetSizeCheck" />

            <EditText
                android:id="@+id/inputcode4"
                android:layout_width="40dp"
                android:layout_height="45dp"
                android:gravity="center"
                android:imeOptions="actionNext"
                android:importantForAutofill="no"
                android:inputType="number"
                android:maxLength="1"
                android:textColor="@color/black"
                android:textSize="24sp"
                android:textStyle="bold"
                tools:ignore="lableFor,SpeakableTextPresentCheck,TouchTargetSizeCheck" />


            <EditText
                android:id="@+id/inputcode5"
                android:layout_width="40dp"
                android:layout_height="45dp"
                android:gravity="center"
                android:imeOptions="actionNext"
                android:importantForAutofill="no"
                android:inputType="number"
                android:maxLength="1"
                android:textColor="@color/black"
                android:textSize="24sp"
                android:textStyle="bold"
                tools:ignore="lableFor,SpeakableTextPresentCheck,TouchTargetSizeCheck" />


            <EditText
                android:id="@+id/inputcode6"
                android:layout_width="40dp"
                android:layout_height="45dp"
                android:gravity="center"
                android:imeOptions="actionDone"
                android:importantForAutofill="no"
                android:inputType="number"
                android:maxLength="1"
                android:textColor="@color/black"
                android:textSize="24sp"
                android:textStyle="bold"
                tools:ignore="lableFor,SpeakableTextPresentCheck,TouchTargetSizeCheck" />
        </LinearLayout>

<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="15dp"
    android:gravity="center"
    android:orientation="horizontal">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/didn_t_receive_the_otp"
        android:textSize="14sp"
        android:textColor="#5F5E5E"/>


        <TextView
            android:id="@+id/textresendOTP"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:text="@string/resend_otp"
            android:textColor="@color/enabledColor"
            android:textSize="15sp"
            android:textStyle="bold"/>

</LinearLayout>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/getotp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:background="@drawable/greenbuttongradieant"
            android:fontFamily="@font/lato_bold"
            android:text="@string/verify"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="16sp"
            android:textStyle="bold"/>



        </LinearLayout>



</ScrollView>